# Assignment8/backend/api/openapi.yaml
@@ -84,40 +84,22 @@ paths:
       parameters:
         - in: query
           name: search
-          required: true
+          required: false
           schema:
             type: string
-      responses:
-        200:
-          description: Successfully grabbed Searched listings
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AllListings'
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error' 
-
-  /categoryListings:
-    get:
-      description: Gets Searched Listings
-      parameters:
         - in: query
           name: category
-          required: true
+          required: false
           schema:
             type: string
       responses:
         200:
-          description: Successfully grabbed Searched listings
+          description: Successfully grabbed Searched and category listings
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AllListings'
-        default:
+        400:
           description: unexpected error
           content:
             application/json:
